@@ -1,6 +1,5 @@
 package blackbox.writer;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -190,7 +189,7 @@ class CsvWriterTest {
         }
 
         assertEquals("value1,value2\r\n",
-            new String(Files.readAllBytes(file), UTF_8));
+            Files.readString(file));
     }
 
     @Test
